--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
 
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header >
+        <div class="container text-center bg-dark">
+            <div class="row">
+              <div class="col-3">
+                Column
+              </div>
+              <div class="col-6">
+                <div>
+                    <img src="" alt="">
+                </div>
+              </div>
+              <div class="col-3">
+                Column
+              </div>
+            </div>
+          </div>
+    </header>
+    <!-- header end here  -->
+
+    <!-- main section start here  -->
+    <main>
+
+    </main>
+
+    <!-- main sectin start here  -->
+    <footer>
+
+    </footer>
 
 
 
