--- a/index.html
+++ b/index.html
@@ -5,38 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Best Five Player</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
-    <header >
-        <div class="container text-center bg-dark">
-            <div class="row">
-              <div class="col-3">
-                Column
-              </div>
-              <div class="col-6">
-                <div>
-                    <img src="" alt="">
+
+    <section>
+      <div class="container">
+        <header >
+          <div class="container text-center bg-dark">
+              <div style="min-height: 500px;" class="row ">
+                <div class="col-3 ps-0 pb-0 mb-0 d-flex justify-content-start align-items-end">
+                  <div>
+                      <img src="images/mbappe.png" class=" float-start mb-0" alt="">
+                  </div>
+                </div>
+                <div class="col-6 d-flex justify-content-center align-items-center">
+                  <div class= "">
+                      <h1 class=" best-player  ">Select Your Best Five</h1>
+                      <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae alias laborum vel, nihil nisi ut. Repellendus officia iste numquam suscipit eveniet nobis, veritatis atque, aliquid minus maiores architecto quidem!
+                      </p>
+                     
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div>
+                      <img src="images/Card-psg.png" alt="">
+                  </div>
                 </div>
               </div>
-              <div class="col-3">
-                Column
-              </div>
             </div>
+      </header>
+      <!-- header end here  -->
+  
+      <!-- main section start here  -->
+      <main>
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class=" col-3">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class=" col-3">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class=" col-3">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class=" col-3">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+
           </div>
-    </header>
-    <!-- header end here  -->
+        </section>
+  
+      </main>
+  
+      <!-- main sectin start here  -->
+      <footer>
+  
+      </footer>
+  
 
-    <!-- main section start here  -->
-    <main>
-
-    </main>
-
-    <!-- main sectin start here  -->
-    <footer>
-
-    </footer>
-
+      </div>
+    </section>
 
 
 
