add vallidation in bugdet

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="col-6 d-flex justify-content-center align-items-center">
                   <div class= "">
                       <h1 class=" best-player  ">World Best Players</h1>
-                      <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae alias laborum vel, nihil nisi ut. Repellendus officia iste numquam suscipit eveniet nobis, veritatis atque, aliquid minus maiores architecto quidem!
+                      <p class="text-white">World best footaller's and Manager and Coach stuff here. You can choose your favourit players stuff and Select here.     
                       </p>
                      
                   </div>
