add more vallidation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <header >
           <div class="container text-center bg-dark">
-              <div style="min-height: 500px;" class="row ">
+              <div style="min-height: 450px;" class="row ">
                 <div class="col-3 ps-0 pb-0 mb-0 d-flex justify-content-start align-items-end">
                   <div>
                       <img src="images/mbappe.png" class=" float-start mb-0" alt="">
@@ -123,6 +123,7 @@
                    </div>
                   </div>
 
+                  <!-- start player bugdet here  -->
                   <div class="card-body">
                     <div class="card bg-dark text-center mt-3" style="width: 18rem; min-height: 330px;">
                       <h3 class="mb-2">Bugdet</h1>
@@ -152,7 +153,7 @@
   
       </main>
   
-      <!-- main sectin start here  -->
+      <!-- main sectin end here  -->
       <footer class="footer-section">
         <div class="text-bottom text-white bg-dark d-flex justify-content-center align-items-end" style="height: 100px;" >
           <p>Copyright @ 2022 All Rights Reserved.</p>
